<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".DetailMobilActivity">


        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="8dp"
            android:textSize="25sp"
            android:fontFamily="@font/gbold"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/detail_name"
            />
        <TextView
            android:id="@+id/detail_decs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:textSize="16sp"
            android:fontFamily="@font/glight"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/detail_decs"
            />
        <TextView
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_decs"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="25sp"
            android:fontFamily="@font/gbold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/harga"
            />
        <TextView
            android:id="@+id/detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/harga"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:fontFamily="@font/glight"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/detail_price"
            />

</RelativeLayout>