<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:scaleType="fitXY"
            tools:src="@color/colorAccent" />
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/gbold"
            tools:text="@string/cars_name" />
        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/gbold"
            tools:text="@string/cars_price"
            />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/tv_item_price"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="11dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:ellipsize="end"
            android:fontFamily="@font/glight"
            android:maxLines="5"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:fontFamily="@font/gbold"
                android:textSize="10sp" />
            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:fontFamily="@font/gbold"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>